--- a/helm/ton-rust-node/values.yaml
+++ b/helm/ton-rust-node/values.yaml
@@ -30,6 +30,40 @@ initImage:
   tag: "3.21"
   pullPolicy: IfNotPresent
 
+## @section Extra init containers
+
+## @param extraInitContainers [array] Additional init containers to run before the node starts. Runs after the built-in init-bootstrap container. Useful for downloading global config, fetching external IP, etc.
+##
+extraInitContainers: []
+# Example — download global config dynamically:
+#   extraInitContainers:
+#     - name: download-config
+#       image: alpine/curl:latest
+#       command:
+#         - sh
+#         - -c
+#         - |
+#           curl -sL https://ton.org/global-config.json -o /config/global.config.json
+#       volumeMounts:
+#         - name: main
+#           mountPath: /config
+
+## @section Extra containers
+
+## @param extraContainers [array] Additional sidecar containers to run alongside the node. Useful for monitoring agents, log shippers, etc.
+##
+extraContainers: []
+
+## @section Extra volumes
+
+## @param extraVolumes [array] Additional volumes for the pod. Use with extraVolumeMounts to mount them into containers.
+##
+extraVolumes: []
+
+## @param extraVolumeMounts [array] Additional volume mounts for the main node container.
+##
+extraVolumeMounts: []
+
 ## @section Resource parameters
 ## Defaults are for a fullnode/liteserver. For validators, use 16/32 CPU and 64Gi/128Gi.
 ## See docs/resources.md for details.
@@ -92,37 +126,44 @@ ports:
   metrics: null
 
 ## @section Service parameters
+## Each port gets its own per-replica Service with independent type, annotations, and perReplica overrides.
+## A Service is only created when the corresponding port is enabled (non-null in ports.*).
+## See docs/networking.md for examples.
 
-## @param services.type Service type
-## @param services.externalTrafficPolicy Traffic policy
-## @param services.annotations [object] Annotations applied to ALL per-replica services
-## @param services.perReplica [array] Per-replica service overrides. List index = replica index. Annotations are merged with the shared ones (per-replica wins on conflict).
+## @param services.adnl.type ADNL service type
+## @param services.adnl.externalTrafficPolicy ADNL service traffic policy
+## @param services.adnl.annotations [object] Annotations applied to all ADNL per-replica services
+## @param services.adnl.perReplica [array] Per-replica ADNL service overrides (list index = replica index)
+##
+## @param services.control.type Control service type
+##
+## @param services.liteserver.type Liteserver service type
+## @param services.liteserver.externalTrafficPolicy Liteserver service traffic policy
+##
+## @param services.jsonRpc.type JSON-RPC service type
+## @param services.jsonRpc.externalTrafficPolicy JSON-RPC service traffic policy
 ##
 services:
-  type: LoadBalancer
-  externalTrafficPolicy: Local
-  annotations: {}
-  perReplica: []
-  # Example — MetalLB static IPs:
-  #   perReplica:
-  #     - annotations:
-  #         metallb.universe.tf/loadBalancerIPs: "192.168.1.100"
-  #     - annotations:
-  #         metallb.universe.tf/loadBalancerIPs: "192.168.1.101"
-  #
-  # Example — AWS Elastic IPs:
-  #   perReplica:
-  #     - annotations:
-  #         service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "eipalloc-aaa"
-  #     - annotations:
-  #         service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "eipalloc-bbb"
-  #
-  # Example — GCP static IPs:
-  #   perReplica:
-  #     - annotations:
-  #         networking.gke.io/load-balancer-ip-addresses: "my-ip-ref-0"
-  #     - annotations:
-  #         networking.gke.io/load-balancer-ip-addresses: "my-ip-ref-1"
+  adnl:
+    type: LoadBalancer
+    externalTrafficPolicy: Local
+    annotations: {}
+    perReplica: []
+  control:
+    type: ClusterIP
+  liteserver:
+    type: LoadBalancer
+    externalTrafficPolicy: Local
+  jsonRpc:
+    type: LoadBalancer
+    externalTrafficPolicy: Local
+  # Example — MetalLB static IPs for ADNL:
+  #   adnl:
+  #     perReplica:
+  #       - annotations:
+  #           metallb.universe.tf/loadBalancerIPs: "192.168.1.100"
+  #       - annotations:
+  #           metallb.universe.tf/loadBalancerIPs: "192.168.1.101"
 
 ## @section Configuration parameters
 
@@ -182,11 +223,104 @@ probes: {}
 #     periodSeconds: 10
 #     failureThreshold: 3
 
+## @section Pod metadata parameters
+
+## @param podAnnotations [object] Additional annotations for pods. Useful for Vault agent injection, service mesh, etc.
+##
+podAnnotations: {}
+
+## @param podLabels [object] Additional labels for pods. Useful for cost allocation, policy enforcement, etc.
+##
+podLabels: {}
+
+## @section Extra environment variables
+
+## @param extraEnv [array] Additional environment variables for the main node container. Supports Downward API, ConfigMap/Secret refs, etc.
+##
+extraEnv: []
+# Example — Kubernetes Downward API:
+#   extraEnv:
+#     - name: K8S_NODE_IP
+#       valueFrom:
+#         fieldRef:
+#           fieldPath: status.hostIP
+#     - name: K8S_POD_NAME
+#       valueFrom:
+#         fieldRef:
+#           fieldPath: metadata.name
+
+## @param extraEnvFrom [array] Additional envFrom sources for the main node container. Inject all keys from a Secret or ConfigMap as environment variables.
+##
+extraEnvFrom: []
+# Example — inject all keys from a Secret:
+#   extraEnvFrom:
+#     - secretRef:
+#         name: my-node-secrets
+
 ## @section Networking parameters
 
 ## @param hostNetwork Bind pods directly to the host network. The pod gets the node's IP with zero NAT overhead. Requires one pod per node — use nodeSelector or podAntiAffinity to spread replicas. See docs/networking.md.
 ##
 hostNetwork: false
+
+## @param hostPort.adnl Expose the ADNL port on the host IP via hostPort
+## @param hostPort.control Expose the control port on the host IP via hostPort
+## @param hostPort.liteserver Expose the liteserver port on the host IP via hostPort
+## @param hostPort.jsonRpc Expose the JSON-RPC port on the host IP via hostPort
+## @param hostPort.metrics Expose the metrics port on the host IP via hostPort
+##
+hostPort:
+  adnl: false
+  control: false
+  liteserver: false
+  jsonRpc: false
+  metrics: false
+# Example — expose ADNL on the host without hostNetwork.
+# Anti-affinity is required: two pods on the same node would compete for the same host port.
+#   hostPort:
+#     adnl: true
+#   affinity:
+#     podAntiAffinity:
+#       requiredDuringSchedulingIgnoredDuringExecution:
+#         - labelSelector:
+#             matchLabels:
+#               app.kubernetes.io/name: ton-rust-node
+#           topologyKey: kubernetes.io/hostname
+
+## @section NetworkPolicy parameters
+
+## @param networkPolicy.enabled Create a NetworkPolicy. ADNL is always allowed from 0.0.0.0/0. TCP ports (control, liteserver, jsonRpc, metrics) get rules automatically when enabled — restrict with allowCIDRs.
+## @param networkPolicy.allowCIDRs [array] Source CIDRs for TCP port rules (control, liteserver, jsonRpc, metrics). If empty, traffic is not restricted by source.
+## @param networkPolicy.extraIngress [array] Additional raw ingress rules appended to the policy.
+##
+networkPolicy:
+  enabled: false
+  allowCIDRs: []
+  extraIngress: []
+# Example — restrict TCP ports to internal network, add a custom rule:
+#   networkPolicy:
+#     enabled: true
+#     allowCIDRs:
+#       - 10.0.0.0/8
+#     extraIngress:
+#       - ports:
+#           - port: 8080
+#             protocol: TCP
+#         from:
+#           - namespaceSelector:
+#               matchLabels:
+#                 name: monitoring
+
+## @section ServiceAccount parameters
+
+## @param serviceAccount.enabled Create a ServiceAccount for the pods
+## @param serviceAccount.name [nullable] ServiceAccount name. Defaults to the release fullname if not set.
+## @param serviceAccount.annotations [object] Annotations for the ServiceAccount (e.g. for Vault or cloud IAM role binding)
+##
+serviceAccount:
+  enabled: false
+  name: ""
+  annotations: {}
 
 ## @section Scheduling parameters
 
