--- a/helm/ton-rust-node/values.yaml
+++ b/helm/ton-rust-node/values.yaml
@@ -19,6 +19,10 @@ image:
   tag: v0.1.2-mainnet
   pullPolicy: IfNotPresent
 
+## @param imagePullSecrets [array] Image pull secrets for private registries
+##
+imagePullSecrets: []
+
 ## @section Init container image parameters
 
 ## @param initImage.repository Init container image repository
