--- a/helm/nodectl/templates/pvc.yaml
+++ b/helm/nodectl/templates/pvc.yaml
@@ -4,6 +4,15 @@ metadata:
   name: {{ include "nodectl.fullname" . }}-data
   labels:
     {{- include "nodectl.labels" . | nindent 4 }}
+  {{- if or .Values.storage.resourcePolicy (gt (len .Values.storage.annotations) 0) }}
+  annotations:
+    {{- with .Values.storage.annotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+    {{- if .Values.storage.resourcePolicy }}
+    helm.sh/resource-policy: {{ .Values.storage.resourcePolicy | quote }}
+    {{- end }}
+  {{- end }}
 spec:
   accessModes:
     - {{ .Values.storage.accessMode }}
