--- a/helm/ton-rust-node/templates/secret-node-configs.yaml
+++ b/helm/ton-rust-node/templates/secret-node-configs.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "ton-rust-node.fullname" . }}-node-configs
+  name: {{ include "node.fullname" . }}-node-configs
   labels:
-    {{- include "ton-rust-node.labels" . | nindent 4 }}
+    {{- include "node.labels" . | nindent 4 }}
 stringData:
   {{- range $key, $value := .Values.nodeConfigs }}
   {{ $key }}: |
-    {{- $value | nindent 4 }}
+    {{- tpl $value $ | nindent 4 }}
   {{- end }}
 {{- end }}
