--- a/helm/ton-rust-node/templates/configmap-basestate.yaml
+++ b/helm/ton-rust-node/templates/configmap-basestate.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "ton-rust-node.fullname" . }}-basestate
+  name: {{ include "node.fullname" . }}-basestate
   labels:
-    {{- include "ton-rust-node.labels" . | nindent 4 }}
+    {{- include "node.labels" . | nindent 4 }}
 binaryData:
   basestate.boc: {{ .Values.basestate }}
 {{- end }}
