--- a/helm/ton-rust-node/templates/configmap-global.yaml
+++ b/helm/ton-rust-node/templates/configmap-global.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "ton-rust-node.fullname" . }}-global-config
+  name: {{ include "node.fullname" . }}-global-config
   labels:
-    {{- include "ton-rust-node.labels" . | nindent 4 }}
+    {{- include "node.labels" . | nindent 4 }}
 data:
   global.config.json: |
     {{- if .Values.globalConfig }}
