--- a/helm/ton-rust-node/templates/configmap-logs.yaml
+++ b/helm/ton-rust-node/templates/configmap-logs.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "ton-rust-node.fullname" . }}-logs-config
+  name: {{ include "node.fullname" . }}-logs-config
   labels:
-    {{- include "ton-rust-node.labels" . | nindent 4 }}
+    {{- include "node.labels" . | nindent 4 }}
 data:
   logs.config.yml: |
     {{- if .Values.logsConfig }}
