--- a/helm/ton-rust-node/templates/configmap-zerostate.yaml
+++ b/helm/ton-rust-node/templates/configmap-zerostate.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "ton-rust-node.fullname" . }}-zerostate
+  name: {{ include "node.fullname" . }}-zerostate
   labels:
-    {{- include "ton-rust-node.labels" . | nindent 4 }}
+    {{- include "node.labels" . | nindent 4 }}
 binaryData:
   zerostate.boc: {{ .Values.zerostate }}
 {{- end }}
