--- a/helm/ton-rust-node/templates/service-metrics.yaml
+++ b/helm/ton-rust-node/templates/service-metrics.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "ton-rust-node.fullname" . }}-metrics
+  name: {{ include "node.fullname" . }}-metrics
   labels:
-    {{- include "ton-rust-node.labels" . | nindent 4 }}
+    {{- include "node.labels" . | nindent 4 }}
     app.kubernetes.io/component: metrics
   {{- if .Values.metrics.annotations.enabled }}
   annotations:
@@ -15,7 +15,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    {{- include "ton-rust-node.selectorLabels" . | nindent 4 }}
+    {{- include "node.selectorLabels" . | nindent 4 }}
   ports:
     - name: metrics
       port: {{ .Values.ports.metrics }}
