--- a/helm/ton-rust-node/templates/serviceaccount.yaml
+++ b/helm/ton-rust-node/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "ton-rust-node.serviceAccountName" . }}
+  name: {{ include "node.serviceAccountName" . }}
   labels:
-    {{- include "ton-rust-node.labels" . | nindent 4 }}
+    {{- include "node.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
